# DiveLogAssistant

./: .gitignore  EXAMPLE_QUERIES.md  README.md  populate_dive_log.py  pyproject.toml  sample_dives.json
aidivelog/: agents.py  config.py  dive_log_assistant.py  sqlite_service.py  tools.py
