[project]
name = "aidivelog"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Engel"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "pyautogen>=0.2.0",
    "autogen-ext[ui] (>=0.7.5,<0.8.0)",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken (>=0.12.0,<0.13.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
